; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/extr_atmel-aes.c_atmel_aes_write_ctrl_key.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/extr_atmel-aes.c_atmel_aes_write_ctrl_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.atmel_aes_dev = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@AES_KEYSIZE_128 = common dso_local global i32 0, align 4
@AES_MR_KEYSIZE_128 = common dso_local global i32 0, align 4
@AES_KEYSIZE_192 = common dso_local global i32 0, align 4
@AES_MR_KEYSIZE_192 = common dso_local global i32 0, align 4
@AES_MR_KEYSIZE_256 = common dso_local global i32 0, align 4
@AES_FLAGS_MODE_MASK = common dso_local global i32 0, align 4
@AES_MR_SMOD_IDATAR0 = common dso_local global i32 0, align 4
@AES_MR_DUALBUFF = common dso_local global i32 0, align 4
@AES_MR_SMOD_AUTO = common dso_local global i32 0, align 4
@AES_MR = common dso_local global i32 0, align 4
@AES_MR_OPMOD_MASK = common dso_local global i32 0, align 4
@AES_MR_OPMOD_ECB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.atmel_aes_dev*, i32, i32*, i32*, i32)* @atmel_aes_write_ctrl_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @atmel_aes_write_ctrl_key(%struct.atmel_aes_dev* %0, i32 %1, i32* %2, i32* %3, i32 %4) #0 {
  %6 = alloca %struct.atmel_aes_dev*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.atmel_aes_dev* %0, %struct.atmel_aes_dev** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32 %4, i32* %10, align 4
  store i32 0, i32* %11, align 4
  %12 = load i32, i32* %10, align 4
  %13 = load i32, i32* @AES_KEYSIZE_128, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %15, label %19

15:                                               ; preds = %5
  %16 = load i32, i32* @AES_MR_KEYSIZE_128, align 4
  %17 = load i32, i32* %11, align 4
  %18 = or i32 %17, %16
  store i32 %18, i32* %11, align 4
  br label %32

19:                                               ; preds = %5
  %20 = load i32, i32* %10, align 4
  %21 = load i32, i32* @AES_KEYSIZE_192, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %27

23:                                               ; preds = %19
  %24 = load i32, i32* @AES_MR_KEYSIZE_192, align 4
  %25 = load i32, i32* %11, align 4
  %26 = or i32 %25, %24
  store i32 %26, i32* %11, align 4
  br label %31

27:                                               ; preds = %19
  %28 = load i32, i32* @AES_MR_KEYSIZE_256, align 4
  %29 = load i32, i32* %11, align 4
  %30 = or i32 %29, %28
  store i32 %30, i32* %11, align 4
  br label %31

31:                                               ; preds = %27, %23
  br label %32

32:                                               ; preds = %31, %15
  %33 = load %struct.atmel_aes_dev*, %struct.atmel_aes_dev** %6, align 8
  %34 = getelementptr inbounds %struct.atmel_aes_dev, %struct.atmel_aes_dev* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 8
  %36 = load i32, i32* @AES_FLAGS_MODE_MASK, align 4
  %37 = and i32 %35, %36
  %38 = load i32, i32* %11, align 4
  %39 = or i32 %38, %37
  store i32 %39, i32* %11, align 4
  %40 = load i32, i32* %7, align 4
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %56

42:                                               ; preds = %32
  %43 = load i32, i32* @AES_MR_SMOD_IDATAR0, align 4
  %44 = load i32, i32* %11, align 4
  %45 = or i32 %44, %43
  store i32 %45, i32* %11, align 4
  %46 = load %struct.atmel_aes_dev*, %struct.atmel_aes_dev** %6, align 8
  %47 = getelementptr inbounds %struct.atmel_aes_dev, %struct.atmel_aes_dev* %46, i32 0, i32 1
  %48 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %47, i32 0, i32 0
  %49 = load i64, i64* %48, align 8
  %50 = icmp ne i64 %49, 0
  br i1 %50, label %51, label %55

51:                                               ; preds = %42
  %52 = load i32, i32* @AES_MR_DUALBUFF, align 4
  %53 = load i32, i32* %11, align 4
  %54 = or i32 %53, %52
  store i32 %54, i32* %11, align 4
  br label %55

55:                                               ; preds = %51, %42
  br label %60

56:                                               ; preds = %32
  %57 = load i32, i32* @AES_MR_SMOD_AUTO, align 4
  %58 = load i32, i32* %11, align 4
  %59 = or i32 %58, %57
  store i32 %59, i32* %11, align 4
  br label %60

60:                                               ; preds = %56, %55
  %61 = load %struct.atmel_aes_dev*, %struct.atmel_aes_dev** %6, align 8
  %62 = load i32, i32* @AES_MR, align 4
  %63 = load i32, i32* %11, align 4
  %64 = call i32 @atmel_aes_write(%struct.atmel_aes_dev* %61, i32 %62, i32 %63)
  %65 = load %struct.atmel_aes_dev*, %struct.atmel_aes_dev** %6, align 8
  %66 = call i32 @AES_KEYWR(i32 0)
  %67 = load i32*, i32** %9, align 8
  %68 = load i32, i32* %10, align 4
  %69 = call i32 @SIZE_IN_WORDS(i32 %68)
  %70 = call i32 @atmel_aes_write_n(%struct.atmel_aes_dev* %65, i32 %66, i32* %67, i32 %69)
  %71 = load i32*, i32** %8, align 8
  %72 = icmp ne i32* %71, null
  br i1 %72, label %73, label %84

73:                                               ; preds = %60
  %74 = load i32, i32* %11, align 4
  %75 = load i32, i32* @AES_MR_OPMOD_MASK, align 4
  %76 = and i32 %74, %75
  %77 = load i32, i32* @AES_MR_OPMOD_ECB, align 4
  %78 = icmp ne i32 %76, %77
  br i1 %78, label %79, label %84

79:                                               ; preds = %73
  %80 = load %struct.atmel_aes_dev*, %struct.atmel_aes_dev** %6, align 8
  %81 = call i32 @AES_IVR(i32 0)
  %82 = load i32*, i32** %8, align 8
  %83 = call i32 @atmel_aes_write_block(%struct.atmel_aes_dev* %80, i32 %81, i32* %82)
  br label %84

84:                                               ; preds = %79, %73, %60
  ret void
}

declare dso_local i32 @atmel_aes_write(%struct.atmel_aes_dev*, i32, i32) #1

declare dso_local i32 @atmel_aes_write_n(%struct.atmel_aes_dev*, i32, i32*, i32) #1

declare dso_local i32 @AES_KEYWR(i32) #1

declare dso_local i32 @SIZE_IN_WORDS(i32) #1

declare dso_local i32 @atmel_aes_write_block(%struct.atmel_aes_dev*, i32, i32*) #1

declare dso_local i32 @AES_IVR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
